--- a/resume.tex
+++ b/resume.tex
@@ -30,7 +30,7 @@
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 \begin{wrapfigure}{r}{70pt}
 \vspace{-20pt}
-\includegraphics[height=32.74mm,width=24.65mm]{photo.jpeg}
+\includegraphics[height=32.74mm,width=24.65mm]{head.jpg}
 \end{wrapfigure}
 \name{钱\quad{洋}} % Your name
 \address{Blog | https://foxliveray.github.io/} % Your address
